--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "chart.js": "^4.4.3",
     "cheerio": "1.0.0-rc.12",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.3",
     "lowdb": "^7.0.1",
     "lucide-react": "^0.365.0",
     "next": "^14.2.16",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -41,6 +43,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.2.45",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -60,7 +63,7 @@
     "postcss": "^8.4.32",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.5.0",
-    "puppeteer": "^23.3.0",
+    "puppeteer": "^24.16.2",
     "tailwindcss": "^3.3.6",
     "typescript": "^4.9.5"
   },
